   * Fixed parsing of ??< ??> ??( ??) trigraphs (QTCREATORBUG-2474)
   * Fixed adding definition for function with rvalue-reference
     (QTCREATORBUG-10555)
   * Fixed semantic highlighting after "Save as"
   * Fixed syntax highlighting of multiline strings and comments (QTCREATORBUG-662)
   * Improved the Insert Virtual Functions refactoring action:
       * Check only pure virtual functions by default
       * Display all overrides of a function
       * Do not include final functions

Python Support

GLSL Support

Qt Quick Designer
   * Fixed selecting overlapping items with same z-value (QTCREATORBUG-11066)
   * Fixed setting text alignment (QTCREATORBUG-11054)
   * Fixed crash with anchors (QTCREATORBUG-11138)

Diff Viewer

Version Control Systems
   * Git
      * Added visual indicator for affected commits when resetting and rebasing
      * Enabled option to push commit directly after fixup
      * Enabled choosing non-fast-forward merge when fast-forward is applicable
      * Added completion in change selection dialog
   * ClearCase
      * Improved performance of indexing dynamic views
      * Added warning when editing Derived Objects
   * Bazaar
      * Added support for uncommit command

FakeVim
   * Added "gj", "gk", "g0", "g^" and "g$" commands
   * Made dot command work for letter case commands in visual mode

Platform Specific

Linux

Qt Support

QNX
   * Added support for Python based pretty printers when debugging on devices
   * Added better error messages for common deployment errors
     (QTCREATORBUG-9673, QTCREATORBUG-9001)
   * Added line and column information to text based BAR descriptor editor
     (QTCREATORBUG-10395)
   * Fixed several issues with certificate password dialog in BlackBerry
     options (QTCREATORBUG-10948)

Android
   * Made it possible to cancel waiting for an AVD to boot up
   * Fixed opening Java files from error messages (QTCREATORBUG-10904)

Remote Linux

Bare Metal

Credits for these changes go to:
