@@ -35,7 +35,7 @@ The "class" and "firstpage" attributes specify that it is a Qt 4 wizard and
 leave room for the Qt 4 target page.
 -->
 <wizard version="1" kind="project"
-        class="qt4project" firstpage="10"
+        class="qmakeproject" firstpage="10"
         id="Z.Snippet" category="H.QtProjects">
     <description>Creates a qmake-based test project for which a code snippet can be entered.</description>
     <displayname>Code Snippet</displayname>;
